--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Minifb</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <script type="text/javascript" src="script.js"></script> 
 </body>
 </html>
